--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Favicon para la pestaña -->
+    <link rel="icon" href="/src/assets/favicon-16x16.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="/src/assets/favicon-32x32.png" type="image/png" sizes="32x32">
+
+    <!-- Favicon para dispositivos móviles y otros -->
+    <link rel="icon" href="/src/assets/favicon-192x192.png" type="image/png" sizes="192x192">
+
     <title>Caney Digital</title>
   </head>
   <body>
